 *) Fix several lethal race conditions involving SECCOMP_FILTER_FLAG_TSYNC
 *) Fix integrity violation misattribution to a wrong task when pint_enforce=0
 *) Fix several integrity violation race conditions when pint_enforce=0
 *) Fix race condition on msr_validate sysctl changes as well as on transitions
    between profile_validate=4 and others
 *) Support building against (but not yet loading into) Linux 6.15-rc1+
 *) Build and link the userspace logger tools with hardening flags, and pass
    distributions' RPM packaging hardening flags to the compiler and linker
 *) lkrg-logctl: Support and report continuation lines (an extra one-character
    field indicating whether the line is a new message or a continuation)


The following major changes have been made between LKRG 0.9.8 and 0.9.9:

 *) Support Linux 6.11+ and stable 6.10.10+
 *) Support new longterm kernels 5.10.220+
 *) Support new CentOS Stream 9 kernel 5.14.0-470.el9 and beyond (to RHEL 9.5)
 *) Support CONFIG_JUMP_LABEL batch mode also on ARM64
 *) Re-support build without CONFIG_TRACEPOINTS (was broken in 0.9.8)
 *) pCFI: Upgrade "Frame pointer is not on the stack" to ALERT with enforcement
 *) Simplify seccomp validation (should help portability to more kernel builds)


The following major changes have been made between LKRG 0.9.7 and 0.9.8:

 *) Add optional remote kernel message logging, including the sending component
    in LKRG itself and the receiving/logging counterpart in a userspace daemon,
    as well as additional utilities to generate a public/secret keypair and to
    process the logs, and documentation in LOGGING
 *) Add support for RHEL 8.8+
 *) RPM spec file improvements to make it work or properly fail in a wider set
    of circumstances, and to use the "weak-modules" script if available so that
    on RHEL and its rebuilds the same LKRG package build works across different
    kABI-compatible kernel revisions/builds
 *) More complete documentation of the build requirements

