@@ -7,6 +7,8 @@ The following major changes have been made since 0.9.9:
  *) Fix several integrity violation race conditions when pint_enforce=0
  *) Fix race condition on msr_validate sysctl changes as well as on transitions
     between profile_validate=4 and others
+ *) Make kprobes testing via LKRG's own dummy function hooking optional (works
+    around issue seen on recent Gentoo)
  *) Support building against (but not yet loading into) Linux 6.15-rc1+
  *) Build and link the userspace logger tools with hardening flags, and pass
     distributions' RPM packaging hardening flags to the compiler and linker
